<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WalkSafe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_journey">JourneyActivity</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_remove">RemoveActivity</string>
    <string name="contact_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="add">Add Contact</string>
    <string name="remove">Remove Contact</string>
    <string name="save">Save</string>
    <string name="main_menu">Back to Menu</string>
    <string name="saved">Contacts were successfully saved!</string>
    <string name="panic">Call For Help</string>
    <string name="home">Safely Back Home</string>
    <string name="settings">Settings</string>
    <string name="duration">Choose a Journey</string>
    <string name="recheck">Did you get home safe?</string>
    <string name="wait">5 more minutes</string>
    <string name="desc">Logo</string>

    <string-array name="duration_arrays">
        <item>10 min</item>
        <item>20 min</item>
        <item>30 min</item>
    </string-array>

    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_wait">WaitActivity</string>

</resources>
