<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context = "com.example.deltahacks.walksafe.MainActivity" >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:onClick="goToSettings"
        android:id="@+id/settings" />

<<<<<<< HEAD
    <ImageButton
        android:contentDescription="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/settings"
        android:onClick="goToSettings"/>


    <TextView
=======
   <TextView
>>>>>>> FETCH_HEAD
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/duration"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />



   <CheckBox
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact 1"/>

   <CheckBox
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact 2" />

   <CheckBox
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact 3" />

   <CheckBox
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact 4" />

   <CheckBox
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact 5" />

   <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/duration_arrays"
        android:prompt="@string/duration" />

   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/start"
        android:onClick="submitJourney"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:contentDescription="@string/desc"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:id="@+id/background"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/background" />


</LinearLayout>
